gitops-apps/security/cluster-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    ingress.cilium.io/loadbalancer-mode: shared
    ingress.cilium.io/loadbalancer-class: io.cilium/l2-announcer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: cluster04.podzone.cloud
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /oauth2
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - cluster04.podzone.cloud
    secretName: cluster-cert
